fixe l'alignement

--- a/developpement/implementation/symfony/web/css/stylePersonalized.css
+++ b/developpement/implementation/symfony/web/css/stylePersonalized.css
@@ -126,8 +126,8 @@
 }
 
 .container{
-    padding-left: 30px !important;
-    padding-right: 30px !important;
+    padding-left: 5px !important;
+    padding-right: 10px !important;
     margin-top: 20px !important;
 }
 
